=== HEAD

* No longer use native autoreconnection in the mysql adapter (jeremyevans)

* Add NULL, NOTNULL, TRUE, SQLTRUE, FALSE, and SQLFALSE constants (jeremyevans)

* Add Dataset #select_map, #select_order_map, and #select_hash (jeremyevans)

* Make Dataset#group_and_count handle arguments other than Symbols (jeremyevans)

* Add :only_if_modified option to validates_unique method in validation_helpers plugin (jeremyevans)

* Allow specifying the dataset alias via :alias option when using union/intersect/except (jeremyevans)

* Allow Model#destroy to take an options hash and respect a :transaction option (john_firebaugh)

* If a transaction is being used, raise_on_save_failure is false, and a before hook returns false, rollback the transaction (john_firebaugh, jeremyevans)

* In the schema_dumper, explicitly specify the :type option if it isn't Integer (jeremyevans)

* On postgres, use bigserial type if :type=>Bignum is given as an option to primary_key (jeremyevans)

* Use READ_DEFAULT_GROUP in the mysql adapter to load the options in the client section of the my.cnf file (crohr)

=== 3.6.0 (2009-11-02)

* Make the MSSQL shared adapter correctly parse the column schema information for tables in the non-default database schema (rohit.namjoshi)

* Use save_changes instead of save when updating existing associated objects in the nested_attributes plugin (jeremyevans)

* Allow Model#save_changes to accept an option hash that is passed to save, so you can save changes without validating (jeremyevans)

* Make nested_attributes plugin add newly created objects to cached association array immediately (jeremyevans)

* Make add_ association method not add the associated object to the cached array if it's already there (jeremyevans)

* Add Model#modified! for explicitly marking an object as modified, so save_changes/update will run callbacks even if no columns have been modified (jeremyevans)
 